--- a/.github/workflows/publish-thread.yml
+++ b/.github/workflows/publish-thread.yml
@@ -1,8 +1,8 @@
 name: Publish thread
 
-on:
-  schedule:
-    - cron: '0 * * * *'
+# on:
+#   schedule:
+#     - cron: '0 * * * *'
 
 jobs:
   publish_thread:
